NXP-32673: Cleanup + fix some SonarQube issues